Make valid HTML

--- a/getting-started/mix-otp/index.html
+++ b/getting-started/mix-otp/index.html
@@ -1,5 +1,6 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+	<head>
     <meta http-equiv="refresh" content="0; url=/getting-started/mix-otp/introduction-to-mix.html" />
   </head>
 </html>
