Add title element to redirect pages

--- a/getting-started/mix-otp/index.html
+++ b/getting-started/mix-otp/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 	<head>
+		<title>Introduction to Mix - Elixir</title>
     <meta http-equiv="refresh" content="0; url=/getting-started/mix-otp/introduction-to-mix.html" />
   </head>
 </html>
