--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 	<head>
+	  <title>Introduction - Elixir</title>
     <meta http-equiv="refresh" content="0; url=/getting-started/introduction.html" />
   </head>
 </html>
