--- a/getting-started/meta/index.html
+++ b/getting-started/meta/index.html
@@ -1,5 +1,7 @@
-<html>
-  <head>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+	<head>
+	  <title>Quote and unquote - Elixir</title>		
     <meta http-equiv="refresh" content="0; url=/getting-started/meta/quote-and-unquote.html" />
   </head>
 </html>
