--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
----
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  
+ <body>
+  ---
 section: home
 layout: default
 ---
@@ -175,3 +182,5 @@ iex> :crypto.hash(:md5, "Using crypto from Erlang OTP")
     </div>
   </div>
 </div>
+  </body>
+</html>
