Add companies using elixir section
Co-authored-by: Ricardo Echavarria <rgechavarria@gmail.com>
Co-authored-by: Laura Bernal <laurabernal2552@gmail.com>

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@ layout: default
     </div>
   </div>
 
+  <div class="hentry post cases">
+    <h3>Companies using Elixir in production</h3>
+    <a href="/blog/categories.html#Cases">See more cases →</a>
+  </div>
+
   <div class="hentry post">
     <h3>Platform features</h3>
   </div>
