--- a/index.html
+++ b/index.html
@@ -16,9 +16,29 @@ layout: default
     </div>
   </div>
 
-  <div class="hentry post cases">
-    <h3>Companies using Elixir in production</h3>
-    <a href="/blog/categories.html#Cases">See more cases →</a>
+  <div class="hentry post">
+    
+    <div class="cases-header">
+      <h3>Companies using Elixir in production</h3>
+      <a href="/blog/categories.html#Cases">See more cases →</a>
+    </div>
+
+    <div class="clases-boxes">
+      {% for post in site.categories.Cases limit: 3 %}
+        <a href="{{ post.url }}">
+          <div>
+            <div>
+              <img src="{{ post.logo }}" />
+            </div>
+            <div>
+              {% for tag in post.tags %}
+                <span>#{{tag}}</span>
+              {% endfor %}
+            </div>
+          </div>
+        </a>        
+      {% endfor %}      
+    </div>
   </div>
 
   <div class="hentry post">
