Link to elixir-companies.com and other fixes

--- a/cases.html
+++ b/cases.html
@@ -26,3 +26,7 @@ layout: default
     </a>        
   {% endfor %}      
 </div>
+
+<p></p>
+
+<p>Want to see more companies? Check out <a href="https://elixir-companies.com" target="_blank">the Elixir Companies website</a>, which is maintained by the community.</p>
