--- a/cases.html
+++ b/cases.html
@@ -10,21 +10,19 @@ layout: default
 <div class="cases-boxes">
   {% assign sorted_posts = site.categories["Elixir in Production"] | sort: 'date' %}
   {% for post in sorted_posts %}
-    <a class="cases-box" href="{{ post.url }}">
-      <div class="cases-image">
-        {% if post.logo == nil %}
-          <img src="/images/cases/logos/default-image.png"> 
-        {% else %}
-          <img src="{{ post.logo }}"> 
-        {% endif %} 
-      </div>
+    <a class="cases-box" href="{{ post.url }}" title="Case: {{ post.title }}">
+      {% if post.logo == nil %}
+        <div class="cases-image" style="background-image: url('/images/cases/logos/default-image.png')"></div>
+      {% else %}
+        <div class="cases-image" style="background-image: url('{{ post.logo }}')"></div>
+      {% endif %}
       <div class="cases-tag">
         {% for tag in post.tags %}
           <span>#{{tag}}</span>
         {% endfor %}
       </div>
-    </a>        
-  {% endfor %}      
+    </a>
+  {% endfor %}
 </div>
 
 <p></p>
