--- a/index.html
+++ b/index.html
@@ -24,21 +24,19 @@ layout: default
 
     <div class="cases-boxes" id="shuffled-cases">
       {% for post in site.categories["Elixir in Production"] %}
-        <a class="cases-box" href="{{ post.url }}">
-          <div class="cases-image">
-            {% if post.logo == nil %}
-              <img src="/images/cases/logos/default-image.png"> 
-            {% else %}
-              <img src="{{ post.logo }}"> 
-            {% endif %} 
-          </div>
+        <a class="cases-box" href="{{ post.url }}" title="Case: {{ post.title }}">
+          {% if post.logo == nil %}
+            <div class="cases-image" style="background-image: url('/images/cases/logos/default-image.png')"></div>
+          {% else %}
+            <div class="cases-image" style="background-image: url('{{ post.logo }}')"></div>
+          {% endif %}
           <div class="cases-tag">
             {% for tag in post.tags %}
               <span>#{{tag}}</span>
             {% endfor %}
           </div>
-        </a>        
-      {% endfor %}      
+        </a>
+      {% endfor %}
     </div>
   </div>
 
