--- a/cases.html
+++ b/cases.html
@@ -5,7 +5,7 @@ layout: default
 
 <h1>Cases</h1>
 
-<p>Learn more about how companies across different industries are using the power of Elixir and its ecosystem to create and grow their businesses. Cases are listed in the order they have been published.</p>
+<p>Click on the cases below to learn more about how companies across different industries are using the power of Elixir and its ecosystem to create and grow their businesses. Cases are listed in the order they have been published.</p>
 
 <div class="cases-boxes">
   {% assign sorted_posts = site.categories["Elixir in Production"] | sort: 'date' %}
