Trim down IEx examples

--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@ Finished in 0.04 seconds (0.04s on load, 0.00s on tests)
 {% highlight text %}
 $ iex
 Interactive Elixir - press Ctrl+C to exit (type h() ENTER for help)
-iex> h String.trim           # Prints the documentation for function
-iex> i "Hello, World"        # Prints information about the given data type
-iex> break! String.trim/1    # Sets a breakpoint in the String.trim/1 function
-iex> recompile               # Recompiles the current project on the fly
+iex> h String.trim           # Prints the documentation
+iex> i "Hello, World"        # Prints information about a data type
+iex> break! String.trim/1    # Sets a breakpoint
+iex> recompile               # Recompiles the current project
 {% endhighlight %}
 
       <p>Code notebooks like <a href="https://livebook.dev/">Livebook</a> allow you to interact with Elixir directly from your browser, including support for plotting, flowcharts, data tables, machine learning, and much more!</p>
