--- a/getting-started/meta/index.html
+++ b/getting-started/meta/index.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-	<head>
-	  <title>Quote and unquote - Elixir</title>
-    <meta http-equiv="refresh" content="0; url=/getting-started/meta/quote-and-unquote.html" />
-  </head>
-</html>
+---
+layout: redirect
+sitemap: false
+redirect_to: quote-and-unquote
+---
