--- a/getting-started/mix-otp/index.html
+++ b/getting-started/mix-otp/index.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
-	<head>
-		<title>Introduction to Mix - Elixir</title>
-    <meta http-equiv="refresh" content="0; url=/getting-started/mix-otp/introduction-to-mix.html" />
-  </head>
-</html>
+---
+layout: redirect
+sitemap: false
+redirect_to: introduction-to-mix
+---
