Remove version from hexdocs links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ iex> "Elixir" |> String.graphemes() |> Enum.frequencies()
 %{"E" => 1, "i" => 2, "l" => 1, "r" => 1, "x" => 1}
 {% endhighlight %}
 
-      <p>Check our <a href="https://hexdocs.pm/elixir/1.16/introduction.html">Getting Started guide</a> and our <a href="/learning.html">Learning page</a> to begin your journey with Elixir. Or keep scrolling for an overview of the platform, language, and tools.
+      <p>Check our <a href="https://hexdocs.pm/elixir/introduction.html">Getting Started guide</a> and our <a href="/learning.html">Learning page</a> to begin your journey with Elixir. Or keep scrolling for an overview of the platform, language, and tools.
     </div>
   </div>
 
@@ -195,7 +195,7 @@ iex> :crypto.hash(:sha256, "Using crypto from Erlang OTP")
 <<192, 223, 75, 115, ...>>
 {% endhighlight %}
 
-      <p>To learn more about Elixir, check our <a href="https://hexdocs.pm/elixir/1.16/introduction.html">Getting Started guide</a>. We also have <a href="/docs.html">online documentation available</a> and a <a href="/crash-course.html">Crash Course for Erlang developers</a>.</p>
+      <p>To learn more about Elixir, check our <a href="https://hexdocs.pm/elixir/introduction.html">Getting Started guide</a>. We also have <a href="/docs.html">online documentation available</a> and a <a href="/crash-course.html">Crash Course for Erlang developers</a>.</p>
     </div>
   </div>
 </div>
