--- a/cases.html
+++ b/cases.html
@@ -9,8 +9,9 @@ image: /images/social/elixir-og-card.jpg
 <p>Click on the cases below to learn more about how companies across different industries are using the power of Elixir and its ecosystem to create and grow their businesses. Cases are listed in the order they have been published.</p>
 
 <div class="cases-boxes">
-  {% assign sorted_posts = site.categories["Elixir in Production"] | sort: 'date' %}
+  {% assign sorted_posts = site.categories["Elixir in Production"] | sort: 'date' | reverse %}
   {% for post in sorted_posts %}
+    {%- if post.flagship %}
     <a class="cases-box" href="{{ post.url }}" title="Case: {{ post.title }}">
       {% if post.logo == nil %}
         <div class="cases-image" style="background-image: url('/images/cases/logos/default-image.png')"></div>
@@ -23,6 +24,23 @@ image: /images/social/elixir-og-card.jpg
         {% endfor %}
       </div>
     </a>
+    {%- endif -%}
+  {% endfor %}
+  {% for post in sorted_posts %}
+    {%- unless post.flagship %}
+    <a class="cases-box" href="{{ post.url }}" title="Case: {{ post.title }}">
+      {% if post.logo == nil %}
+        <div class="cases-image" style="background-image: url('/images/cases/logos/default-image.png')"></div>
+      {% else %}
+        <div class="cases-image" style="background-image: url('{{ post.logo }}')"></div>
+      {% endif %}
+      <div class="cases-tag">
+        {% for tag in post.tags %}
+          <span>#{{tag}}</span>
+        {% endfor %}
+      </div>
+    </a>
+    {%- endunless -%}
   {% endfor %}
 </div>
 
