--- a/index.html
+++ b/index.html
@@ -28,20 +28,29 @@ iex> "Elixir" |> String.graphemes() |> Enum.frequencies()
       <a href="/cases.html">See more cases →</a>
     </div>
 
-    <div class="cases-boxes" id="shuffled-cases">
+    <div class="cases-boxes">
+    {% assign sorted_posts = site.categories["Elixir in Production"] | sort: 'date' | reverse %}
+    {% for post in sorted_posts %}
+      {%- if post.flagship %}
+      <a class="cases-box" href="{{ post.url }}" title="Case: {{ post.title }}">
+        {% if post.logo == nil %}
+        <div class="cases-image" style="background-image: url('/images/cases/logos/default-image.png')"></div>
+        {% else %}
+        <div class="cases-image" style="background-image: url('{{ post.logo }}')"></div>
+        {% endif %}
+      </a>
+      {%- endif -%}
+      {% endfor %}
       {% for post in site.categories["Elixir in Production"] %}
-        <a class="cases-box" href="{{ post.url }}" title="Case: {{ post.title }}">
+        {%- unless post.flagship -%}
+        <a class="cases-box shuffle" href="{{ post.url }}" title="Case: {{ post.title }}">
           {% if post.logo == nil %}
-            <div class="cases-image" style="background-image: url('/images/cases/logos/default-image.png')"></div>
+          <div class="cases-image" style="background-image: url('/images/cases/logos/default-image.png')"></div>
           {% else %}
-            <div class="cases-image" style="background-image: url('{{ post.logo }}')"></div>
+          <div class="cases-image" style="background-image: url('{{ post.logo }}')"></div>
           {% endif %}
-          <div class="cases-tag">
-            {% for tag in post.tags %}
-              <span>#{{tag}}</span>
-            {% endfor %}
-          </div>
         </a>
+        {%- endunless -%}
       {% endfor %}
     </div>
   </div>
